--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,6 +1,6 @@
 # If your site is in 'https', then make sure your base url isn't written using 'http' otherwise your sitemap would
 # contain http (as opposeed to https) URLs. This would affect Google indexing of your URLs.
-baseURL: "https://NOS-AE.github.io/"
+baseURL: "https://nosae.top/"
 title: NOSAE
 copyright: "© [NOSAE](https://github.com/NOS-AE)"
 theme: [PaperMod]
