--- a/hugo.yaml
+++ b/hugo.yaml
@@ -120,11 +120,10 @@ params:
       id: 34198a0b-759f-412a-9db5-df76a807a06b # fill in your Umami ID
       domain: https://cloud.umami.is # fill in your Umami domain
 
-    # https://www.goatcounter.com/
+    # https://goatcounter.com/
     goatcounter:
       enable: true
-      host: nosae.top # for blocking local development
-      id: nosae
+      domain: goatcounter.nosae.top
 
   assets:
     disableHLJS: true
